Some refacto and delete useless imports